--- a/package.json
+++ b/package.json
@@ -1,34 +1,29 @@
 {
-  "name": "module-13-challenge-orm",
+  "name": "google-books",
   "version": "1.0.0",
   "description": "",
   "main": "server.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "start": "node server.js",
-    "watch": "nodemon server.js",
-    "seed": "node seeds/index.js"
-  },
-  "repository": {
-    "type": "git",
-    "url": "git@work.github.com:coding-boot-camp/module-13-challenge-orm.git"
+    "dev": "nodemon sever.js"
   },
   "keywords": [],
   "author": "",
   "license": "ISC",
-  "devDependencies": {
-    "nodemon": "^2.0.21"
-  },
   "dependencies": {
+    "axios": "^1.3.4",
     "bcrypt": "^5.1.0",
     "connect-session-sequelize": "^7.1.5",
-    "dotenv": "^8.2.0",
+    "dotenv": "^16.0.3",
     "eslint-config-wesbos": "^3.2.3",
-    "express": "^4.17.1",
-    "express-handlebars": "^5.2.0",
-    "express-session": "^1.17.1",
-    "handlebars": "^4.7.6",
-    "mysql2": "^2.1.0",
+    "express": "^4.18.2",
+    "express-handlebars": "^7.0.1",
+    "express-session": "^1.17.3",
+    "handlebars": "^4.7.7",
+    "mysql2": "^3.2.0",
     "sequelize": "^6.29.0"
+  },
+  "devDependencies": {
+    "nodemon": "^2.0.21"
   }
 }
